@@ -185,6 +185,10 @@ This Work includes contributions authored by David E. Jones, not as a
             <xs:sequence>
                 <xs:element minOccurs="0" ref="description"/>
                 <xs:element minOccurs="0" maxOccurs="unbounded" ref="subtype"/>
+                <xs:element minOccurs="0" maxOccurs="unbounded" ref="parameter">
+                    <xs:annotation><xs:documentation>Nested parameters are for Map and Node (groovy.util.Node) type
+                        parameters only.</xs:documentation></xs:annotation>
+                </xs:element>
                 <xs:element minOccurs="0" maxOccurs="unbounded" ref="ParameterValidations">
                     <xs:annotation><xs:documentation>To override the default message for each just add the message
                         inside the element.</xs:documentation></xs:annotation>
